--- a/_src/_includes/layout.njk
+++ b/_src/_includes/layout.njk
@@ -4,10 +4,14 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
+     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
-     <h1>11ty one one T Y</h1>
+     <header>
+          {% include 'nav.html'%}
+          </header>
+     {{ content | safe }}
      
-
 </body>
 </html>
